--- a/app/views/layouts/author.html.erb
+++ b/app/views/layouts/author.html.erb
@@ -10,6 +10,9 @@
 <body class="relative">
 	<div class="main-wrapper oh">
 		<%= render "layouts/navbar"%>
+		 <% flash.each do |message_type, message| %>
+         <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
+      <% end %>
 		<%= yield %>
 	</div>
 </body>
