--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -40,9 +40,6 @@
                         <li><%= link_to "/" do%>Travel<% end %></li>
                       </ul>
                     </li>
-                     <li>
-                      <%= link_to author_posts_path, class: " nav-link #{yield(:about_active)}" do%>MY Post<% end %>
-                    </li>
                     <li>
                       <%= link_to about_path, class: " nav-link #{yield(:about_active)}" do%>About<% end %>
                     </li>
@@ -50,6 +47,23 @@
                     <li>
                       <%= link_to contact_path,  class: " nav-link #{yield(:contact_active)}" do%>Contact<% end %>
                     </li>
+                    <% if logged_in? %>
+                    <li class="dropdown">
+                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                     Account <b class="caret"></b>
+                      </a>
+                      <ul class="dropdown-menu">
+                        <li><%= link_to "MY Post", author_posts_path %></li>
+                        <li><%= link_to "Profile", current_user %></li>
+                        <li>
+                          <%= link_to "Log out", logout_path, method: :delete %>
+                        </li>
+                        </ul>
+                        </li>
+                        <% else %>
+                         <li><%= link_to "Log in", login_path %></li>
+                        <% end %>
+                        </ul>
                   </ul> <!-- end menu -->
                 </div> <!-- end collapse -->
               </div> <!-- end col -->
