--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -55,6 +55,7 @@
                       <ul class="dropdown-menu">
                         <li><%= link_to "MY Post", author_posts_path %></li>
                         <li><%= link_to "Profile", current_user %></li>
+                        <li><%= link_to "Setting", edit_user_path(current_user) %></li>
                         <li>
                           <%= link_to "Log out", logout_path, method: :delete %>
                         </li>
