added tinymce editor

--- a/app/views/author/posts/_form.html.erb
+++ b/app/views/author/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@post) do |f| %>
+<%= form_for(@post, url: author_posts_url) do |f| %>
   <% if @post.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved:</h2>
@@ -11,26 +11,68 @@
     </div>
   <% end %>
 
-  <div class="field">
+<div class="container">
+<div class="row">
+  <div class="col-md-3">
+
+  <div class="card" style="width: 20rem;">
+  <div class="card-block">
+  <% if @post.new_record? %>
+    <h4 class="card-title">
+    New post
+    </h4>
+    <% else %> 
+     <h4 class="card-title">
+     <b>Edit</b>
+     <span class="thin-text"><%= @post.title%></span>
+    <% end%>
+
+  </div>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item">
+<div class="field">
     <%= f.label :title %><br>
-    <%= f.text_field :title %>
+    <%= f.text_field :title, class: 'form-control'%>
   </div>
-
-   <div class="field">
+    </li>
+    <li class="list-group-item">
+      <div class="field">
     <%= f.label :banner_image_url %><br>
-    <%= f.text_field :banner_image_url %>
+    <%= f.text_field :banner_image_url, class: 'form-control' %>
   </div>
 
-  <div class="field">
-    <%= f.label :body %><br>
+    </li>
+    <li class="list-group-item">
+      <div class="field">
+    <%= f.label :description %><br>
+    <%= f.text_area :description, class: 'form-control' %>
+  </div>
+    </li>
+     <li class="list-group-item">
+      <div class="field">
+       <div class="actions">
+    <%= f.submit  "Save blog post", class: 'btn btn-success btn-block'%>
+  </div>
+  </div>
+    </li>
+  </ul>
+</div>
+<% if @post.persisted? %>
+<%= link_to 'Show', @post %> |
+<% end %>
+<%= link_to 'Back', author_posts_path %>
+
+
+  </div>
+  <div class="col-md-9">
+    <div class="field">
+   <br>
+   <br>
+   <br>
     <%= f.text_area :body %>
   </div>
-  <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_area :description %>
   </div>
+</div>
 
-  <div class="actions">
-    <%= f.submit %>
-  </div>
 <% end %>
+</div>
