--- a/app/views/author/posts/edit.html.erb
+++ b/app/views/author/posts/edit.html.erb
@@ -1,7 +1,5 @@
 <%= provide(:page_title, "Edit #{@post.title}" )%>
-<h1>Editing Post</h1>
+<!-- <h1 class="text-center">Editing Post</h1> -->
 
-<%= render 'form' %>
+<%= render 'form', post: @post, url: author_posts_url(@post) %>
 
-<%= link_to 'Show', @post %> |
-<%= link_to 'Back', posts_path %>
