--- a/app/views/author/posts/new.html.erb
+++ b/app/views/author/posts/new.html.erb
@@ -2,6 +2,5 @@
 <% provide(:blog_active, 'active') %>
 <h1>New Post</h1>
 
-<%= render 'form' %>
+<%= render 'form', post: @post, url: author_posts_url(@post) %>
 
-<%= link_to 'Back', posts_path %>
