--- a/app/views/author/posts/show.html.erb
+++ b/app/views/author/posts/show.html.erb
@@ -2,18 +2,45 @@
 <% provide(:blog_active, 'active') %>
 
 
- <section class="header-wrap hero-section bg-light">
-      <div class="container">
-        <div class="logo-container text-center">
-          <div class="logo-wrap">
-            <%= link_to "/" do%>
-            <%= image_tag("http://via.placeholder.com/270x270", class: "logo-dark", alt:"") %>
-            <% end %>
-          </div>
-        </div>
-      </div>
-    </section>
+  <div class="carousel fade-carousel slide" data-ride="carousel" data-interval="4000" id="bs-carousel">
+  <!-- Overlay -->
+  <div class="overlay"></div>
 
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#bs-carousel" data-slide-to="0" class="active"></li>
+    <li data-target="#bs-carousel" data-slide-to="1"></li>
+    <li data-target="#bs-carousel" data-slide-to="2"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+    <div class="item slides active">
+      <div class="slide-1"></div>
+      <div class="hero">
+        <hgroup>
+            <h1 style="color: #fff">We are creative</h1>        
+        </hgroup>
+      </div>
+    </div>
+    <div class="item slides">
+      <div class="slide-2"></div>
+      <div class="hero">        
+        <hgroup>
+            <h1 style="color: #fff">We are smart</h1>        
+        </hgroup>       
+      </div>
+    </div>
+    <div class="item slides">
+      <div class="slide-3"></div>
+      <div class="hero">        
+        <hgroup>
+            <h1 style="color: #fff">We are amazing</h1>        
+        </hgroup>
+      </div>
+    </div>
+  </div> 
+</div>
 
 <div class="content-wrapper oh">
 
