pagination and published post done

--- a/app/views/blog/posts/index.html.erb
+++ b/app/views/blog/posts/index.html.erb
@@ -170,9 +170,14 @@
                       </div>
                     </div>
                   </article>
+
                 </div>
                 <% end %>
+
               </div> <!-- end grid posts -->
+               <div class="apple_pagination">
+                 <%= will_paginate @posts %>
+                 </div>
 
 
               <div class="row mt-20">
