--- a/app/views/author/posts/index.html.erb
+++ b/app/views/author/posts/index.html.erb
@@ -18,7 +18,17 @@
       <td>
       <%= link_to post.title, author_post_path(post)%>
       </td>
-      <td><%= link_to 'Edit', edit_author_post_path(post), class: 'btn btn-sm btn-warning'  %></td>
+      <% if post.published? %>
+      <td>
+      <%= link_to 'unpublish', unpublish_author_post_path(post), method: :put, class: 'btn btn-sm btn-primary'  %>
+      </td>
+      <% else%>
+      <td>
+      <%= link_to 'Publish', publish_author_post_path(post), method: :put, class: 'btn btn-sm btn-success'  %>
+      </td>
+      <% end %>
+
+       <td><%= link_to 'Edit', edit_author_post_path(post), class: 'btn btn-sm btn-warning'  %></td>
       <td><%= link_to 'Remove', author_post_path(post), method: :delete, data: {confirm: 'Are you sure?'}, class: 'btn btn-sm btn-danger' %></td>
     </tr>
  <% end %>
