--- a/app/views/author/posts/_form.html.erb
+++ b/app/views/author/posts/_form.html.erb
@@ -48,6 +48,14 @@
     <%= f.text_area :description, class: 'form-control' %>
   </div>
     </li>
+
+    <!-- <li class="list-group-item">
+      <div class="field">
+    <%= f.label 'Tags' %><br>
+    <%= f.text_area :tag_list, class: 'form-control' %>
+    </div>
+    </li> -->
+
      <li class="list-group-item">
       <div class="field">
        <div class="actions">
